changes regarding netlify cms support. Experimental

--- a/contact/index.html
+++ b/contact/index.html
@@ -57,6 +57,9 @@
 <meta name="theme-color" content="#ffffff">
 
 
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+
 
 
 
