--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 <meta name="theme-color" content="#ffffff">
 
 
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+
 
 
 
